test: 수정된 예약 진행 코드 테스트 코드를 통한 정상 동작 확인